# upload-images-to-icp-asset

./: .env  Cargo.toml  README.md  Trunk.toml  build.rs  canister_ids.json  dfx.json  tailwind.config.js
.dfx/ic/canisters/upload-images-to-icp-asset/: index.js
did/: asset_proxy.did  canister_ids.json  provision.did
src/: lib.rs  main.rs
src/canister/: mod.rs
src/components/: header.rs  mod.rs
src/consts/: mod.rs  remote.rs
src/outbound/: mod.rs  upload_files.rs
src/pages/: home.rs
src/state/: auth.rs  auth_actions.rs  canister.rs  canisters.rs  mod.rs
style/: output.css
